ready PC landing

--- a/index.html
+++ b/index.html
@@ -689,15 +689,363 @@
                             </div>
                         </div>
                     </div>
-                    <a href="" class="btn btn-success w-100 mt-5">Хочу стать ТОП-менеджером!</a>
+                    <a href="" class="btn btn-success btn-lg w-100 mt-5">Хочу стать ТОП-менеджером!</a>
                 </div>
             </div>
         </div>
     </section>
     <!-- / sec_programm -->
 
+    <!-- sec_guarantee -->
+    <section class="sec sec_guarantee">
+        <div class="bg-gradient">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8">
+                        <div class="sec_title title-left">
+                            <p class="upper-title">Личная Гарантия - я верну вам полную сумму </p>
+                            <p class="under-title">Если после первых двух практикумов вы скажете, что это <br> обучение
+                                - не
+                                для вас.</p>
+                            <h2>Деньги верну без дополнительных вопросов! </h2>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="img_wrapp">
+                            <img src="img/lms_booster/sec_guarantee.svg" alt="sec_guarantee">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- / sec_guarantee -->
+
+    <!-- sec_you_will_get -->
+    <section class="sec sec_you_will_get media_wrapp bg-green">
+        <div class="container">
+            <div class="sec_title">
+                <img src="img/lms_booster/sec_what_results__title-label.svg" alt="title_label">
+                <h2>Что вы еще получите, проходя <b>LMS Booster:</b> 12 шагов к <br> Х-кратному росту?</h2>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Ты освоишь навыки ТОП-менеджеров, которые помогут тебе в эффективном карьерном продвижении
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Попадешь в окружение ТОП-менеджеров, акционеров бизнеса и инвесторов, которые станут твоими
+                            наставниками и смотивируют к Х-кратному росту</p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Научишься мыслить как ТОП, видеть и использовать возможности, которые тебя окружают </p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Получишь профессиональное развитие, основанное на твоих сильных сторонах </p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Поймешь основы менеджмента, стратегического и тактического планирования, и начнешь применять
+                            эти знания на практике</p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Выйдешь на новый уровень по организации и реализации проектов от идеи до результата</p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Создашь и начнешь развивать личный бренд профессионала, расскажешь о своих компетенциях
+                            внутри компании и во внешних "тусовках" </p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Создашь именно то резюме, которое мечтают увидеть руководители HR служб и генеральные
+                            директора на собеседовании</p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Создашь и начнешь развивать личный бренд профессионала, расскажешь о своих компетенциях
+                            внутри компании и во внешних "тусовках" </p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Создашь именно то резюме, которое мечтают увидеть руководители HR служб и генеральные
+                            директора на собеседовании</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- / sec_you_will_get -->
+
+    <!-- sec_best_students -->
+    <section class="sec sec_best_students">
+        <div class="bg-gradient">
+            <div class="container">
+                <div class="sec_title title-left">
+                    <p class="upper-title">Участники, которые себя проявят - получат возможность пройти стажировку в
+                        известных холдингах России! </p>
+                    <p class="under-title">Лучшие - попадут на радары ведущих Хед Хантеров СНГ.</p>
+                </div>
+                <div class="row">
+                    <div class="col-md-7">
+                        <div class="sec_title title-left">
+                            <h2>А самых лучших - приглашу на топовые позиции в свои проекты. </h2>
+                        </div>
+                    </div>
+                    <div class="col-md-5">
+                        <div class="img_wrapp">
+                            <img src="img/lms_booster/sec_best_students.svg" alt="sec_guarantee">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- / sec_best_students -->
+
+
+    <!-- sec_prizes -->
+    <section class="sec sec_prizes media_wrapp bg-orange">
+        <div class="container">
+            <div class="sec_title">
+                <img src="img/lms_booster/sec_what_results__title-label.svg" alt="title_label">
+                <h2>Вас ждут призы! Победителей определит совет менторов <br><b>LMS Booster</b></h2>
+                <p>По итогам прохождения курса совет менторов определит: </p>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Ты освоишь навыки ТОП-менеджеров, которые помогут тебе в эффективном карьерном продвижении
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Попадешь в окружение ТОП-менеджеров, акционеров бизнеса и инвесторов, которые станут твоими
+                            наставниками и смотивируют к Х-кратному росту</p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Научишься мыслить как ТОП, видеть и использовать возможности, которые тебя окружают </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-6 m-0">
+                    <a href="" class="btn btn-success btn-lg w-100">Участвовать в LMS Booster</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- / sec_prizes -->
+
+    <!-- sec_author_history -->
+    <section class="sec sec_author_history">
+        <div class="container">
+            <div class="sec_title">
+                <img src="img/lms_booster/sec_what_results__title-label.svg" alt="title_label">
+                <h2>Когда-то я начинал на позиции стажера. И это помогло мне <br> добиться грандиозного карьерного
+                    роста!
+                </h2>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe src="https://www.youtube.com/embed/ZdODCz6y0kE" frameborder="0"
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <p>
+                        Моя история предпринимательства и карьерного роста началась в 18 лет. Тогда я создал свои первые
+                        бизнесы, чтобы оплатить обучение в Университете по специальности "Менеджмент".
+                    </p>
+                    <p>
+                        Я стремился к новым знаниям и понимал, что Менеджмент - это специальность, которая всегда будет
+                        востребована и ее крайне сложно роботизировать! В 23 года - я пришел стажером в холдинг НЛМК (В.
+                        Лисин). Это были 7 лет трансформации и интеграции десятков бизнесов, чтобы дорасти до позиции
+                        Генерального Директора.
+                    </p>
+                    <p>
+                        СЕЙЧАС - я обрел финансовую свободу благодаря стратегии накопления и инвестирования. Я занимаюсь
+                        только проектами, которые меня вдохновляют и заряжают!
+                    </p>
+                    <p>
+                        Оглядываясь в прошлое - я понимаю, что мой путь был полон интересных историй, переломных
+                        моментов, достигаторства и стремления идти вперед. Но были еще и падения...после которых я мог
+                        легко сдаться и не добиться ничего! Но обо всем по порядку...
+                    </p>
+                    <a href="" class="btn btn-success w-100">Полная История</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- / sec_author_history -->
+
+    <!-- sec_change_life -->
+    <section class="sec sec_change_life media_wrapp bg-green">
+        <div class="container">
+            <div class="sec_title">
+                <img src="img/lms_booster/sec_what_results__title-label.svg" alt="title_label">
+                <h2>Как может измениться твоя жизнь после <br> прохождения LMS Booster? </h2>
+                <p>Просто представь на минуту, что после практикума LMS Booster ты <br> обретешь навыки и возможности,
+                    которые позволят тебе: </p>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Ты освоишь навыки ТОП-менеджеров, которые помогут тебе в эффективном карьерном продвижении
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Попадешь в окружение ТОП-менеджеров, акционеров бизнеса и инвесторов, которые станут твоими
+                            наставниками и смотивируют к Х-кратному росту</p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Научишься мыслить как ТОП, видеть и использовать возможности, которые тебя окружают </p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Научишься мыслить как ТОП, видеть и использовать возможности, которые тебя окружают </p>
+                    </div>
+                </div>
+                <div class="col-md-8 mt-3">
+                    <div class="media">
+                        <p>Научишься мыслить как ТОП, видеть и использовать возможности, которые тебя окружают </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- / sec_change_life -->
+
+    <!-- sec_what_will_be -->
+    <section class="sec sec_what_will_be media_wrapp">
+        <div class="container">
+            <div class="sec_title">
+                <img src="img/lms_booster/sec_what_results__title-label.svg" alt="title_label">
+                <h2>Что будет, если ты не пройдешь практикум LMS Booster? </h2>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Ты освоишь навыки ТОП-менеджеров, которые помогут тебе в эффективном карьерном продвижении
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Попадешь в окружение ТОП-менеджеров, акционеров бизнеса и инвесторов, которые станут твоими
+                            наставниками и смотивируют к Х-кратному росту</p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Научишься мыслить как ТОП, видеть и использовать возможности, которые тебя окружают </p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Научишься мыслить как ТОП, видеть и использовать возможности, которые тебя окружают </p>
+                    </div>
+                </div>
+                <div class="col-md-8 mt-3">
+                    <div class="media">
+                        <p>Научишься мыслить как ТОП, видеть и использовать возможности, которые тебя окружают </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- / sec_what_will_be -->
+
+    <!-- sec_start_your_way -->
+    <section class="sec sec_start_your_way bg-green">
+        <div class="container">
+            <div class="sec_title">
+                <img src="img/lms_booster/sec_what_results__title-label.svg" alt="title_label">
+                <h2>Ты готов начать свой путь к реальным результатам и прорыву в карьере?! </h2>
+            </div>
+            <div class="row align-items-center">
+                <div class="col-md-6">
+                    <div class="text-center text-block">
+                        <img src="img/lms_booster/sec_start_your_way.svg" alt="sec_start_your_way">
+                        <p>Если после первых двух практикумов вы <br> скажете, что это обучение - не для вас. </p>
+                        <h3>Деньги верну без <br> дополнительных вопросов! </h3>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card">
+                        <h3 class="card-title">Оставь контакты и получи профессиональную консультацию</h3>
+                        <form class="b-form">
+                            <div class="form-group">
+                                <label for="InputName" class="text-yellow">Имя</label>
+                                <input type="text" class="form-control" id="InputName" aria-describedby="InputName"
+                                    placeholder="Введите ваше имя">
+                            </div>
+                            <div class="form-group">
+                                <label for="InputPhone" class="text-yellow">Номер телефона</label>
+                                <input type="tel" class="form-control" id="InputPhone" aria-describedby="InputPhone"
+                                    placeholder="Введите ваш телефон">
+                            </div>
+                            <div class="form-group">
+                                <label for="InputEmail" class="text-yellow">E-mail</label>
+                                <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp"
+                                    placeholder="Введите ваш Email ">
+                            </div>
+                            <button type="submit" class="btn btn-success w-100">Получить консультации</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- / sec_start_your_way -->
+
     <!-- sec_faq -->
-    <section id="course_programm" class="sec sec_programm bg-blue">
+    <section class="sec sec_faq bg-blue">
         <div class="container">
             <div class="sec_title">
                 <h2 class="text-white">Часто задаваемые вопросы</h2>
@@ -715,8 +1063,7 @@
                             </h2>
                         </div>
 
-                        <div id="collapse_1" class="collapse" aria-labelledby="headingOne"
-                            data-parent="#accordion">
+                        <div id="collapse_1" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                             <div class="card-body">
                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
                                 squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
