--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#course_programm">Програма курса</a>
+                  <a class="nav-link" href="#about_author">Мой опыт</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#my_expertize">Моя экспертность</a>
+                    <a class="nav-link" href="#my_expertise">Моя экспертность</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#reviews">Отзывы</a>
+                    <a class="nav-link" href="#video_review">Отзывы</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#ya_nastavnik">Я - наставник</a>
@@ -64,7 +64,7 @@
                             <li><img src="img/icons/ok.svg" alt="ok">Прошел путь от стажера до инвестора</li>
                         </ul>
                         <div class="card__footer">
-                            <a href="#" class="btn btn-success">Узнать Подробнее</a>
+                            <a href="#practics" class="btn btn-success">Узнать Подробнее</a>
                             <a href="#" class="btn btn-success">Принять участие</a>
                         </div>
                     </div>
@@ -90,12 +90,15 @@
     <!-- / sec_practics -->
 
     <!-- sec_practics -->
-    <section class="sec sec_practics media_wrapp">
+    <section class="sec sec_practics media_wrapp" id="practics">
         <div class="container">
             <div class="sec_title">
                 <img src="img/lms_booster/sec_practics__title-label.svg" alt="title_label">
                 <h2><b>Практикум LMS Booster:</b> 12 шагов к Х-кратному Росту идеально подойдет тебе, если</h2>
             </div>
+            <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
+            <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
+            <img alt="" class="abs_pic circle2" src="img/abs_pic/circle.svg">
             <div class="row justify-content-center">
                 <div class="col-md-6">
                     <div class="media">
@@ -305,54 +308,62 @@
                 <div class="col-md-6">
                     <div class="media">
                         <div class="icon"></div>
-                        <p>Ты освоишь навыки ТОП-менеджеров, которые помогут тебе в эффективном карьерном продвижении
+                        <p>Получить продвижение по карьерной лестнице
                         </p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="media">
                         <div class="icon"></div>
-                        <p>Попадешь в окружение ТОП-менеджеров, акционеров бизнеса и инвесторов, которые станут твоими
-                            наставниками и смотивируют к Х-кратному росту</p>
+                        <p>Получить наставников и стать частью развивающей среды</p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="media">
                         <div class="icon"></div>
-                        <p>Научишься мыслить как ТОП, видеть и использовать возможности, которые тебя окружают </p>
+                        <p>Добиться повышения заработной платы</p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="media">
                         <div class="icon"></div>
-                        <p>Получишь профессиональное развитие, основанное на твоих сильных сторонах </p>
+                        <p>Проявить себя перед влиятельными людьми  </p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="media">
                         <div class="icon"></div>
-                        <p>Поймешь основы менеджмента, стратегического и тактического планирования, и начнешь применять
-                            эти знания на практике</p>
+                        <p>Стать востребованным, важным и нужным специалистом в коллективе</p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="media">
                         <div class="icon"></div>
-                        <p>Выйдешь на новый уровень по организации и реализации проектов от идеи до результата</p>
+                        <p>Взять реванш и доказать свою состоятельность и готовность быть ТОПом</p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="media">
                         <div class="icon"></div>
-                        <p>Создашь и начнешь развивать личный бренд профессионала, расскажешь о своих компетенциях
-                            внутри компании и во внешних "тусовках" </p>
+                        <p>Стать востребованным, важным и нужным специалистом в коллективе</p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="media">
                         <div class="icon"></div>
-                        <p>Создашь именно то резюме, которое мечтают увидеть руководители HR служб и генеральные
-                            директора на собеседовании</p>
+                        <p>Получить сертификат, подтверждающий высокий уровень квалификации</p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Доказать руководству свою эффективность и получить интересные проекты</p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Улучшить свое резюме, создать личный бренд и стать привлекательным для престижных работодателей</p>
                     </div>
                 </div>
             </div>
@@ -383,7 +394,7 @@
     <!-- / sec_you_get_everything -->
 
     <!-- sec_about_author -->
-    <section class="sec sec_about_author bg-orange">
+    <section class="sec sec_about_author bg-orange" id="about_author">
         <div class="container">
             <div class="sec_title">
                 <img src="img/lms_booster/sec_what_results__title-label.svg" alt="title_label">
@@ -416,7 +427,7 @@
     <!-- / sec_about_author -->
 
     <!-- sec_video_author -->
-    <section class="sec sec_video_author">
+    <section class="sec sec_video_author" id="my_expertise">
         <div class="container">
             <div class="sec_title">
                 <img src="img/lms_booster/sec_what_results__title-label.svg" alt="title_label">
@@ -436,7 +447,7 @@
     <!-- / sec_video_author -->
 
     <!-- sec_video_review -->
-    <section class="sec sec_video_review">
+    <section class="sec sec_video_review" id="video_review">
         <div class="container">
             <div class="sec_title">
                 <img src="img/lms_booster/sec_what_results__title-label.svg" alt="title_label">
@@ -721,7 +732,7 @@
     <!-- / sec_guarantee -->
 
     <!-- sec_you_will_get -->
-    <section class="sec sec_you_will_get media_wrapp bg-green">
+    <section class="sec sec_you_will_get media_wrapp bg-green" id="ya_nastavnik">
         <div class="container">
             <div class="sec_title">
                 <img src="img/lms_booster/sec_what_results__title-label.svg" alt="title_label">
@@ -923,32 +934,31 @@
                 <div class="col-md-6">
                     <div class="media">
                         <div class="icon"></div>
-                        <p>Ты освоишь навыки ТОП-менеджеров, которые помогут тебе в эффективном карьерном продвижении
+                        <p>Получить должность и заработную плату, к которой ты так давно стремишься
                         </p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="media">
                         <div class="icon"></div>
-                        <p>Попадешь в окружение ТОП-менеджеров, акционеров бизнеса и инвесторов, которые станут твоими
-                            наставниками и смотивируют к Х-кратному росту</p>
+                        <p>Подтвердить свою квалификацию перед коллегами и доказать всем, что ты на что-то способен</p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="media">
                         <div class="icon"></div>
-                        <p>Научишься мыслить как ТОП, видеть и использовать возможности, которые тебя окружают </p>
+                        <p>Освободиться и начать больше времени проводить с семьей, путешествовать и гордиться своими достижениями</p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="media">
                         <div class="icon"></div>
-                        <p>Научишься мыслить как ТОП, видеть и использовать возможности, которые тебя окружают </p>
+                        <p>Обрести шанс, о котором мечтают миллионы людей и ВОСПОЛЬЗОВАТЬСЯ им! </p>
                     </div>
                 </div>
                 <div class="col-md-8 mt-3">
                     <div class="media">
-                        <p>Научишься мыслить как ТОП, видеть и использовать возможности, которые тебя окружают </p>
+                        <p>Ты начнешь жить так, как ты и твоя семья мечтали. Ты научишься добиваться результатов, зарабатывать и занимать престижную должность! Ты окружишь себя серьезными и статусными людьми. Ты превратишься в другого человека! Ты - станешь успешным! </p>
                     </div>
                 </div>
             </div>
@@ -967,32 +977,43 @@
                 <div class="col-md-6">
                     <div class="media">
                         <div class="icon"></div>
-                        <p>Ты освоишь навыки ТОП-менеджеров, которые помогут тебе в эффективном карьерном продвижении
+                        <p>Ты и дальше останешься со своими проблемами лицом к лицу, одному бороться сложнее
                         </p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="media">
                         <div class="icon"></div>
-                        <p>Попадешь в окружение ТОП-менеджеров, акционеров бизнеса и инвесторов, которые станут твоими
-                            наставниками и смотивируют к Х-кратному росту</p>
+                        <p>Ты потеряешь еще один шанс, который тебе преподносит жизнь на твоем пути для карьерного и Х-кратного роста</p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="media">
                         <div class="icon"></div>
-                        <p>Научишься мыслить как ТОП, видеть и использовать возможности, которые тебя окружают </p>
+                        <p>Ты ограничишь свой карьерный рост, не воспользовавшись опытом и методиками лучших корпоративных топ-менеджеров, которые прошли путь от стажеров до инвесторов</p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="media">
                         <div class="icon"></div>
-                        <p>Научишься мыслить как ТОП, видеть и использовать возможности, которые тебя окружают </p>
+                        <p>Ты не приблизишься к своим целям, как и к благосостоянию своей семьи</p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Ты признаешься сам себе, что не готов взять на себя ответственность и сделать прорыв в результатах</p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Ты и дальше будешь крутиться "как белка в колесе", не зная, как доказать руководителю и команде, что ты достоин большего! </p>
                     </div>
                 </div>
                 <div class="col-md-8 mt-3">
                     <div class="media">
-                        <p>Научишься мыслить как ТОП, видеть и использовать возможности, которые тебя окружают </p>
+                        <p>Другими словами - ты откажешься от возможности начать зарабатывать, развиваться, получать повышение и билет в лучшую жизнь! </p>
                     </div>
                 </div>
             </div>
