big img landing

--- a/index.html
+++ b/index.html
@@ -213,6 +213,8 @@
                 <h2>Какие результаты ждут тебя во время и после прохождения практикума LMS Booster: 12 шагов к
                     Х-кратному росту? </h2>
             </div>
+            <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
+            <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
             <div class="row justify-content-center">
                 <div class="col-md-6">
                     <div class="media">
@@ -275,6 +277,7 @@
     <!-- sec_fear -->
     <section class="sec sec_fear">
         <div class="container">
+            <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
             <div class="row">
                 <div class="col-md-8">
                     <div class="sec_title title-left">
@@ -298,6 +301,8 @@
     <!-- sec_you_can -->
     <section class="sec sec_you_can media_wrapp bg-green">
         <div class="container">
+          <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
+          <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
             <div class="sec_title">
                 <img src="img/lms_booster/sec_what_results__title-label.svg" alt="title_label">
                 <h2><b>LMS Booster:</b> 12 шагов к Х-кратному росту - это практикум по достижению целей и освоению
@@ -375,6 +380,7 @@
     <section class="sec sec_you_get_everything">
         <div class="bg-gradient">
             <div class="container">
+
                 <div class="sec_title title-left">
                     <h2>Ты получишь все необходимое, чтобы создать для себя и своей семьи роскошную жизнь:</h2>
                 </div>
@@ -396,6 +402,8 @@
     <!-- sec_about_author -->
     <section class="sec sec_about_author bg-orange" id="about_author">
         <div class="container">
+          <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
+          <img alt="" class="abs_pic dubl_line" src="img/abs_pic/dubl_line.svg">
             <div class="sec_title">
                 <img src="img/lms_booster/sec_what_results__title-label.svg" alt="title_label">
                 <h2>Практикум LMS Booster: 12 шагов к Х-кратному росту ведет Константин Лашкевич</h2>
@@ -429,6 +437,9 @@
     <!-- sec_video_author -->
     <section class="sec sec_video_author" id="my_expertise">
         <div class="container">
+            <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
+            <img alt="" class="abs_pic dubl_line" src="img/abs_pic/dubl_line.svg">
+            <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
             <div class="sec_title">
                 <img src="img/lms_booster/sec_what_results__title-label.svg" alt="title_label">
                 <h2>Почему ты можешь доверять Константину свое обучение и возможность Х-кратного роста?</h2>
@@ -449,6 +460,9 @@
     <!-- sec_video_review -->
     <section class="sec sec_video_review" id="video_review">
         <div class="container">
+            <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
+            <img alt="" class="abs_pic dubl_line" src="img/abs_pic/dubl_line.svg">
+            <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
             <div class="sec_title">
                 <img src="img/lms_booster/sec_what_results__title-label.svg" alt="title_label">
                 <h2>Что говорят об LMS Booster: 12 шагов к Х-кратному росту те, кто обучался у Константина?</h2>
@@ -543,6 +557,9 @@
     <!-- sec_programm -->
     <section id="course_programm" class="sec sec_programm bg-green">
         <div class="container">
+            <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
+            <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
+            <img alt="" class="abs_pic dubl_line_vertical2" src="img/abs_pic/dubl_line.svg">
             <div class="sec_title">
                 <img src="img/lms_booster/sec_what_results__title-label.svg" alt="title_label">
                 <h2>Программа обучения в <b>LMS Booster:</b> 12 шагов к Х-кратному росту</h2>
@@ -734,6 +751,8 @@
     <!-- sec_you_will_get -->
     <section class="sec sec_you_will_get media_wrapp bg-green" id="ya_nastavnik">
         <div class="container">
+            <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
+            <img alt="" class="abs_pic dubl_line_vertical2" src="img/abs_pic/dubl_line.svg">
             <div class="sec_title">
                 <img src="img/lms_booster/sec_what_results__title-label.svg" alt="title_label">
                 <h2>Что вы еще получите, проходя <b>LMS Booster:</b> 12 шагов к <br> Х-кратному росту?</h2>
@@ -841,6 +860,9 @@
     <!-- sec_prizes -->
     <section class="sec sec_prizes media_wrapp bg-orange">
         <div class="container">
+            <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
+            <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
+            <img alt="" class="abs_pic dubl_line" src="img/abs_pic/dubl_line.svg">
             <div class="sec_title">
                 <img src="img/lms_booster/sec_what_results__title-label.svg" alt="title_label">
                 <h2>Вас ждут призы! Победителей определит совет менторов <br><b>LMS Booster</b></h2>
@@ -880,6 +902,8 @@
     <!-- sec_author_history -->
     <section class="sec sec_author_history">
         <div class="container">
+            <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
+            <img alt="" class="abs_pic dubl_line" src="img/abs_pic/dubl_line.svg">
             <div class="sec_title">
                 <img src="img/lms_booster/sec_what_results__title-label.svg" alt="title_label">
                 <h2>Когда-то я начинал на позиции стажера. И это помогло мне <br> добиться грандиозного карьерного
@@ -924,6 +948,8 @@
     <!-- sec_change_life -->
     <section class="sec sec_change_life media_wrapp bg-green">
         <div class="container">
+            <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
+            <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
             <div class="sec_title">
                 <img src="img/lms_booster/sec_what_results__title-label.svg" alt="title_label">
                 <h2>Как может измениться твоя жизнь после <br> прохождения LMS Booster? </h2>
@@ -969,6 +995,8 @@
     <!-- sec_what_will_be -->
     <section class="sec sec_what_will_be media_wrapp">
         <div class="container">
+            <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
+            <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
             <div class="sec_title">
                 <img src="img/lms_booster/sec_what_results__title-label.svg" alt="title_label">
                 <h2>Что будет, если ты не пройдешь практикум LMS Booster? </h2>
@@ -1024,6 +1052,9 @@
     <!-- sec_start_your_way -->
     <section class="sec sec_start_your_way bg-green">
         <div class="container">
+            <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
+            <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
+            <img alt="" class="abs_pic dubl_line" src="img/abs_pic/dubl_line.svg">
             <div class="sec_title">
                 <img src="img/lms_booster/sec_what_results__title-label.svg" alt="title_label">
                 <h2>Ты готов начать свой путь к реальным результатам и прорыву в карьере?! </h2>
@@ -1067,6 +1098,8 @@
     <!-- sec_faq -->
     <section class="sec sec_faq bg-blue">
         <div class="container">
+            <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
+            <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
             <div class="sec_title">
                 <h2 class="text-white">Часто задаваемые вопросы</h2>
             </div>
