--- a/lidmagnit/index.html
+++ b/lidmagnit/index.html
@@ -49,11 +49,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h1>3 практических инструмента для <br> увеличения зарплаты и <br> получения должности <br> ТОП-менеджера</h1>
+                    <h1>3 практических инструмента для <br> увеличения зарплаты и <br> получения должности <br>
+                        ТОП-менеджера</h1>
                 </div>
                 <div class="col-md-8">
                     <div class="card">
-                        <p>От <b>Константина Лашкевича</b> - профессионального СЕО и идеолога позитивного менеджмента </p>
+                        <p>От <b>Константина Лашкевича</b> - профессионального СЕО и идеолога позитивного менеджмента
+                        </p>
                         <a href="#practics" class="btn btn-success">Получить доступ</a>
                     </div>
                 </div>
@@ -166,9 +168,15 @@
         <div class="container">
             <div class="sec_title">
                 <img src="../img/lms_booster/sec_what_results__title-label.svg" alt="title_label">
-                <h2>На живом мастер-классе ты узнаешь и поймешь</h2>
+                <h2>Эффективный ТОП-менеджер: как получить должность ТОПа в престижной компании, и какие навыки для
+                    этого необходимы?</h2>
+                <p>Получи практический 20-ти летний опыт Константина Лашкевича,<br> ужатые в 5 минут видео и краткой PDF
+                    инструкции </p>
             </div>
             <div class="row justify-content-center">
+                <div class="col-12">
+                    <p class="paragraph">Ты получишь: </p>
+                </div>
                 <div class="col-md-6">
                     <div class="media">
                         <div class="icon"></div>
@@ -195,79 +203,46 @@
                         <p>Получишь профессиональное развитие, основанное на твоих сильных сторонах </p>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <div class="media">
-                        <div class="icon"></div>
-                        <p>Поймешь основы менеджмента, стратегического и тактического планирования, и начнешь применять
-                            эти знания на практике</p>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="media">
-                        <div class="icon"></div>
-                        <p>Выйдешь на новый уровень по организации и реализации проектов от идеи до результата</p>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="media">
-                        <div class="icon"></div>
-                        <p>Создашь и начнешь развивать личный бренд профессионала, расскажешь о своих компетенциях
-                            внутри компании и во внешних "тусовках" </p>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="media">
-                        <div class="icon"></div>
-                        <p>Создашь именно то резюме, которое мечтают увидеть руководители HR служб и генеральные
-                            директора на собеседовании</p>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
     <!-- / sec_what_results -->
 
-    <!-- sec_form_master_class -->
-    <section class="sec sec_form_master_class bg-blue">
+    <!-- sec_checklist -->
+    <section class="sec sec_checklist bg-blue text-white">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-md-5 text-center">
-                    <img src="../img/vebinar/sec_form_master_class.svg" alt="sec_form_master_class">
+                <div class="col-md-8">
+                    <div class="sec_title">
+                        <p>Дополнительно ты получишь ЧЕК-ЛИСТ:</p>
+                        <h2>21 навык, который нужно развить, чтобы стать эффективным ТОП-менеджером
+                        </h2>
+                        <a href="#" class="btn btn-success">Получить доступ</a>
+                    </div>
                 </div>
-                <div class="col-md-7">
-                    <h2>Ты готов действовать и получать результаты? Запишись на мой живой мастер класс! </h2>
-                    <form class="b-form">
-                        <div class="form-group">
-                            <label for="InputName" class="text-white">Имя</label>
-                            <input type="text" class="form-control" id="InputName" aria-describedby="InputName"
-                                placeholder="Введите ваше имя">
-                        </div>
-                        <div class="form-group">
-                            <label for="InputPhone" class="text-white">Номер телефона</label>
-                            <input type="tel" class="form-control" id="InputPhone" aria-describedby="InputPhone"
-                                placeholder="Введите ваш телефон">
-                        </div>
-                        <div class="form-group">
-                            <label for="InputEmail" class="text-white">E-mail</label>
-                            <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp"
-                                placeholder="Введите ваш Email ">
-                        </div>
-                        <button type="submit" class="btn btn-success btn-lg w-100">Да, я готов!</button>
-                    </form>
+                <div class="col-md-4 text-center">
+                    <img src="../img/lidmagnit/sec_checklist.svg" alt="sec_checklist">
                 </div>
             </div>
         </div>
     </section>
-    <!-- / sec_form_master_class -->
+    <!-- / sec_checklist -->
 
-    <!-- sec_what_will_be -->
-    <section class="sec sec_what_will_be media_wrapp">
+    <!-- sec_what_results -->
+    <section class="sec sec_what_results media_wrapp bg-green">
         <div class="container">
             <div class="sec_title">
                 <img src="../img/lms_booster/sec_what_results__title-label.svg" alt="title_label">
-                <h2>Кто будет с тобой на живом мастер классе? </h2>
+                <h2>Как выбрать наставника для Х-кратного карьерного роста и сделать настоящий прорыв в результатах?
+                </h2>
+                <p class="mb-5">Мой первый наставник запомнился мне на всю жизнь... Такого *** и в то же время столь
+                    мощного менеджера я не встречал. И знаете - он стал фундаментом для моего развития и результата,
+                    который я имею сейчас. </p>
             </div>
             <div class="row justify-content-center">
+                <div class="col-12">
+                    <p class="paragraph mt-3">Я поделюсь с тобой своим опытом и ты узнаешь: </p>
+                </div>
                 <div class="col-md-6">
                     <div class="media">
                         <div class="icon"></div>
@@ -291,7 +266,65 @@
                 <div class="col-md-6">
                     <div class="media">
                         <div class="icon"></div>
-                        <p>Научишься мыслить как ТОП, видеть и использовать возможности, которые тебя окружают </p>
+                        <p>Получишь профессиональное развитие, основанное на твоих сильных сторонах </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- / sec_what_results -->
+
+    <!-- sec_checklist -->
+    <section class="sec sec_checklist bg-blue text-white">
+        <div class="container">
+            <div class="row flex-row-reverse align-items-center">
+                <div class="col-md-8">
+                    <div class="sec_title">
+                        <p>Дополнительно ты получишь ЧЕК-ЛИСТ:</p>
+                        <h2>Как выбрать наставника для Х-кратного карьерного роста?
+                        </h2>
+                        <a href="#" class="btn btn-success">Получить доступ</a>
+                    </div>
+                </div>
+                <div class="col-md-4 text-center">
+                    <img src="../img/lidmagnit/sec_checklist.svg" alt="sec_checklist">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- / sec_checklist -->
+
+    <!-- sec_what_results -->
+    <section class="sec sec_what_results media_wrapp bg-orange">
+        <div class="container">
+            <div class="sec_title">
+                <img src="../img/lms_booster/sec_what_results__title-label.svg" alt="title_label">
+                <h2>Как добиться повышения зарплаты и создать фундамент для дальнейшего карьерного роста?</h2>
+                <div class="row justify-content-center my-5">
+                    <div class="col-md-9">
+                        <p>Я видел сотни и тысячи карьер, как мега успешных, так и провальных! На моем пути попадались
+                            “полные неучи” в ТОП-менеджерах, и умные ребята, которым не хватало смелости взять себя в
+                            руки и начать расти по карьерной лестнице. Отсутствие смелости - заставляло их оставаться на
+                            том же уровне заработка, что в прошлых годах... </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-12">
+                    <p class="paragraph">Чтобы этой ситуации не происходило с тобой, я расскажу: </p>
+                </div>
+                <div class="col-md-6">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Ты освоишь навыки ТОП-менеджеров, которые помогут тебе в эффективном карьерном продвижении
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Попадешь в окружение ТОП-менеджеров, акционеров бизнеса и инвесторов, которые станут твоими
+                            наставниками и смотивируют к Х-кратному росту</p>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -300,17 +333,43 @@
                         <p>Научишься мыслить как ТОП, видеть и использовать возможности, которые тебя окружают </p>
                     </div>
                 </div>
+                <div class="col-md-6">
+                    <div class="media">
+                        <div class="icon"></div>
+                        <p>Получишь профессиональное развитие, основанное на твоих сильных сторонах </p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
-    <!-- / sec_what_will_be -->
+    <!-- / sec_what_results -->
+
+    <!-- sec_checklist -->
+    <section class="sec sec_checklist bg-blue text-white">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-8">
+                    <div class="sec_title">
+                        <p>Дополнительно ты получишь ЧЕК-ЛИСТ:</p>
+                        <h2>Х действий, необходимых для повышения зарплаты
+                        </h2>
+                        <a href="#" class="btn btn-success">Получить доступ</a>
+                    </div>
+                </div>
+                <div class="col-md-4 text-center">
+                    <img src="../img/lidmagnit/sec_checklist.svg" alt="sec_checklist">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- / sec_checklist -->
 
     <!-- sec_video_review -->
-    <section class="sec sec_video_review">
+    <section class="sec sec_video_review bg-green">
         <div class="container">
             <div class="sec_title">
                 <img src="../img/lms_booster/sec_what_results__title-label.svg" alt="title_label">
-                <h2>Вот, что говорят обо мне те, с кем я работал и добивался результатов!</h2>
+                <h2>Мои методики и практический опыт помогли другим добиться результатов! </h2>
             </div>
             <div class="sleder_wrapp row">
                 <span class="arrow-prev">
@@ -400,16 +459,14 @@
     <!-- / sec_video_review -->
 
     <!-- sec_form_master_class -->
-    <section class="sec sec_form_master_class with_dop_txt bg-blue">
+    <section class="sec sec_form_master_class bg-blue">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-5 text-center">
                     <img src="../img/vebinar/sec_form_master_class.svg" alt="sec_form_master_class">
                 </div>
                 <div class="col-md-7">
-                    <p class="upper-title">Зарегистрируйся на живой мастер-класс и узнай: </p>
-                    <h2>Как получить должность ТОПа в престижной компании и какие навыки для этого необходимы? </h2>
-                    <p class="under-title">Используй методику позитивного менеджмента от президента 3-х холдингов - Константина Лашкевича</p>
+                    <h2>Ты готов начать свой путь к реальным результатам и прорыву в карьере?!</h2>
                     <form class="b-form">
                         <div class="form-group">
                             <label for="InputName" class="text-white">Имя</label>
