--- a/vebinar/index.html
+++ b/vebinar/index.html
@@ -47,6 +47,9 @@
     <!-- sec_product -->
     <section class="sec sec_product">
         <div class="container">
+            <img alt="" class="abs_pic dubl_line_vertical" src="../img/abs_pic/dubl_line.svg">
+            <img alt="" class="abs_pic circle" src="../img/abs_pic/circle.svg">
+            <img alt="" class="abs_pic circle_orange" src="../img/abs_pic/circle_orange.svg">
             <div class="row">
                 <div class="col-12">
                     <p class="upper-title">Живой Мастер-класс:</p>
@@ -105,6 +108,9 @@
     <!-- sec_practics -->
     <section class="sec sec_practics media_wrapp">
         <div class="container">
+            <img alt="" class="abs_pic dubl_line_vertical" src="../img/abs_pic/dubl_line.svg">
+            <img alt="" class="abs_pic dubl_line_vertical2" src="../img/abs_pic/dubl_line.svg">
+            <img alt="" class="abs_pic circle" src="../img/abs_pic/circle.svg">
             <div class="sec_title">
                 <img src="../img/lms_booster/sec_practics__title-label.svg" alt="title_label">
                 <h2>Живой мастер-класс будет полезен тебе, если: </h2>
@@ -196,8 +202,11 @@
     <!-- / sec_practics -->
 
     <!-- sec_what_results -->
-    <section class="sec sec_what_results media_wrapp bg-orange">
+    <section class="sec sec_what_results sec_what_results_1 media_wrapp bg-orange">
         <div class="container">
+            <img alt="" class="abs_pic dubl_line_vertical2" src="../img/abs_pic/dubl_line.svg">
+            <img alt="" class="abs_pic dubl_line" src="../img/abs_pic/dubl_line.svg">
+            <img alt="" class="abs_pic circle" src="../img/abs_pic/circle.svg">
             <div class="sec_title">
                 <img src="../img/lms_booster/sec_what_results__title-label.svg" alt="title_label">
                 <h2>На живом мастер-классе ты узнаешь и поймешь</h2>
@@ -264,6 +273,7 @@
     <!-- sec_form_master_class -->
     <section class="sec sec_form_master_class bg-blue">
         <div class="container">
+            <img alt="" class="abs_pic dubl_line_vertical" src="../img/abs_pic/dubl_line.svg">
             <div class="row align-items-center">
                 <div class="col-md-5 text-center">
                     <img src="../img/vebinar/sec_form_master_class.svg" alt="sec_form_master_class">
@@ -295,8 +305,10 @@
     <!-- / sec_form_master_class -->
 
     <!-- sec_what_will_be -->
-    <section class="sec sec_what_will_be media_wrapp">
+    <section class="sec sec_what_will_be sec_what_will_be_1 media_wrapp">
         <div class="container">
+            <img alt="" class="abs_pic dubl_line_vertical" src="../img/abs_pic/dubl_line.svg">
+            <img alt="" class="abs_pic circle2" src="../img/abs_pic/circle.svg">
             <div class="sec_title">
                 <img src="../img/lms_booster/sec_what_results__title-label.svg" alt="title_label">
                 <h2>Кто будет с тобой на живом мастер классе? </h2>
@@ -340,8 +352,10 @@
     <!-- / sec_what_will_be -->
 
     <!-- sec_video_review -->
-    <section class="sec sec_video_review">
+    <section class="sec sec_video_review sec_video_review_1">
         <div class="container">
+            <img alt="" class="abs_pic dubl_line_vertical" src="../img/abs_pic/dubl_line.svg">
+            <img alt="" class="abs_pic circle" src="../img/abs_pic/circle.svg">
             <div class="sec_title">
                 <img src="../img/lms_booster/sec_what_results__title-label.svg" alt="title_label">
                 <h2>Вот, что говорят обо мне те, с кем я работал и добивался результатов!</h2>
@@ -436,6 +450,8 @@
     <!-- sec_form_master_class -->
     <section class="sec sec_form_master_class with_dop_txt bg-blue">
         <div class="container">
+            <img alt="" class="abs_pic dubl_line_vertical" src="../img/abs_pic/dubl_line.svg">
+            <img alt="" class="abs_pic circle" src="../img/abs_pic/circle.svg">
             <div class="row align-items-center">
                 <div class="col-md-5 text-center">
                     <img src="../img/vebinar/sec_form_master_class.svg" alt="sec_form_master_class">
