--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <a href="https://p.smartexpert.net/login" class="btn btn-success-2 my-2 my-sm-0">Войти</a>
+                <a href="https://p.smartexpert.net/login" class="btn btn-success-2 my-2 my-sm-0">Получить доступ</a>
             </form>
         </div>
     </nav>
