--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
     <section class="sec sec_fear">
         <div class="container">
             <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
-            <div class="row">
+            <div class="row flex-md-row flex-column-reverse">
                 <div class="col-md-8">
                     <div class="sec_title title-left">
                         <p class="upper-title">И наконец - ты поймешь, что все зависит от тебя. <br> Твой успех - это
