lms_booster mobile ready

--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
     <section class="sec sec_guarantee">
         <div class="bg-gradient">
             <div class="container">
-                <div class="row">
+                <div class="row flex-md-row flex-column-reverse">
                     <div class="col-md-8">
                         <div class="sec_title title-left">
                             <p class="upper-title">Личная Гарантия - я верну вам полную сумму </p>
@@ -839,7 +839,7 @@
                         известных холдингах России! </p>
                     <p class="under-title">Лучшие - попадут на радары ведущих Хед Хантеров СНГ.</p>
                 </div>
-                <div class="row">
+                <div class="row flex-md-row flex-column-reverse">
                     <div class="col-md-7">
                         <div class="sec_title title-left">
                             <h2>А самых лучших - приглашу на топовые позиции в свои проекты. </h2>
@@ -983,7 +983,7 @@
                     </div>
                 </div>
                 <div class="col-md-8 mt-3">
-                    <div class="media">
+                    <div class="media text-center">
                         <p>Ты начнешь жить так, как ты и твоя семья мечтали. Ты научишься добиваться результатов, зарабатывать и занимать престижную должность! Ты окружишь себя серьезными и статусными людьми. Ты превратишься в другого человека! Ты - станешь успешным! </p>
                     </div>
                 </div>
@@ -1040,7 +1040,7 @@
                     </div>
                 </div>
                 <div class="col-md-8 mt-3">
-                    <div class="media">
+                    <div class="media text-center">
                         <p>Другими словами - ты откажешься от возможности начать зарабатывать, развиваться, получать повышение и билет в лучшую жизнь! </p>
                     </div>
                 </div>
